Hireforce/objects/Scheduler_Configuration__mdt.object
<CustomObject>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>9:00 AM</fullName>
                    <default>true</default>
                    <label>9:00 AM</label>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM</fullName>
                </value>
                <value>
                    <fullName>6:00 PM</fullName>
                </value>
                <value>
                    <fullName>7:00 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Page_Size__c</fullName>
        <inlineHelpText>Please provide the number of records should to be shown on each page.</inlineHelpText>
        <label>Page Size</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PickList_Values__c</fullName>
        <inlineHelpText>Enter comma separated pick-list values to be used for this functionality</inlineHelpText>
        <label>PickList Values</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Specific_Value__c</fullName>
        <inlineHelpText>Please provide a value which plays a key role for this functionality</inlineHelpText>
        <label>Specific Value</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>8:00 AM</fullName>
                    <default>true</default>
                    <label>8:00 AM</label>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM</fullName>
                </value>
                <value>
                    <fullName>6:00 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Usage_Discription__c</fullName>
        <label>Usage Discription</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <label>Scheduler Configuration</label>
    <pluralLabel>Scheduler Configurations</pluralLabel>
</CustomObject>